src/app/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  color: var(--text);
}

html,
body {
  display: flex;
  flex-direction: column;
  width: 100vw;
  min-height: 100vh;
  overflow-x: hidden;
  /* Resets REM from 16px to 10px */
  font-size: 62.5%;
  font-size: medium;
  background-color: var(--background);
  font-family: 'Inter', 'Roboto', sans-serif;
  transition: background-color 0.5s ease;
}

::selection {
  background-color: color-mix(in srgb, var(--text), transparent 85%);
}

main {
  flex: 1;
  display: flex;
  margin-top: 100px;
}

a {
  color: inherit;
  text-decoration: none;
}

@media screen and (max-width: 1000px) {
  body {
    margin-bottom: 40px;    
  }

  .left {
      display: none;
  }
}

.right {
  flex: 1;
  display: flex;
  flex-direction: column;
  margin: 0 2rem;
}


@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.hljs-keyword {
  color: var(--code-keyword);
}

.hljs-number {
  color: var(--code-number);
}

.hljs-string {
  color: var(--code-string);
}

.hljs-command {
  color: var(--code-command);
}

.hljs-interp {
  color: var(--code-interp);
}

.hljs-meta {
  color: var(--code-meta);
}

.hljs-operator {
  color: var(--code-operator);
}

.hljs-variable {
  color: var(--code-variable);
}

.hljs-function {
  color: var(--code-function);
}

